@@ -9,6 +9,9 @@
 
 	* src/mod_vcard.erl: One call to jlib:jid_to_string/1 was remaining.
 
+	* src/jlib.erl: Add support for #xmlel to parse_xdata_submit/1 and
+	friends. This fixes the user search in mod_vcard.
+
 2008-07-17  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	Merge revisions from 1444 to revision 1457 from trunk.
